syntax = "proto3";

package org.parmeet.grpc.errorhandling.commoditypricegrpc;

import "google/rpc/status.proto";

option java_multiple_files = true;
option java_outer_classname = "CommodityPriceProto";

message Commodity {
  string access_token = 1;
  string commodity_name = 2;
}

message CommodityQuote {
  string commodity_name = 1;
  string producer_name = 2;
  double price = 3;
}

message ErrorResponse {
  string commodity_name = 1;
  string access_token = 2;
  string expected_token = 3;
  string expected_value = 4;
}

message StreamingCommodityQuote {
  oneof message {
    CommodityQuote commodityQuote = 1;
    google.rpc.Status status = 2;
  }
}

service CommodityPriceProvider {
  rpc GetBestCommodityPrice(Commodity) returns (CommodityQuote);
  rpc BidirectionalListOfPrices(stream Commodity) returns (stream StreamingCommodityQuote);
}